// Generated by scripts/mmd_to_dbml.py from docs/schema/star_schema.mmd.
// Do not edit by hand: change the .mmd file and re-run the script.

Project internship_scam_dw {
  database_type: 'SQL Server'
  Note: 'Star Schema v1 - internship postings and internship scam analysis'
}

Table FactInternshipPosting [headercolor: #C0392B] {
  FactPostingKey             bigint   [pk]
  DateKey                    int
  CompanyNameKey             int
  CompanyProfileKey          int
  InternshipTitleKey         int
  IndustryKey                int
  LocationKey                int
  EmploymentTypeKey          int
  WorkModeKey                int
  RecruiterEmailKey          int
  SourceRowID                int      [note: 'lineage only']
  IsFuturePosting            tinyint  [note: 'data quality']
  FakePostingCount           tinyint  [note: 'outcome 0-1 additive']
  PaymentRequired            tinyint  [note: 'additive']
  FakeCertificateOffer       tinyint  [note: 'additive']
  CompanyAge                 smallint [note: 'nullable semi-additive']
  DomainAgeMonths            smallint [note: 'semi-additive']
  Stipend                    int      [note: 'nullable UNRESOLVED']
  RegistrationFee            int      [note: 'currency unresolved']
  JobDescriptionLength       smallint [note: 'additive']
  GrammaticalErrors          tinyint  [note: 'additive']
  VagueDescriptionScore      tinyint  [note: 'non-additive']
  UrgencyScore               tinyint  [note: 'non-additive']
  KeywordSpamScore           tinyint  [note: 'non-additive']
  EmotionalManipulationScore tinyint  [note: 'non-additive']
  PhishingLanguageScore      tinyint  [note: 'non-additive']
  TrustSignalScore           decimal  [note: 'nullable non-additive']
  FraudScore                 decimal  [note: 'non-additive']
  RecruiterExperienceYears   decimal  [note: 'non-additive']
  RecruiterResponseTimeHours decimal  [note: 'non-additive']
}

Table DimDate [headercolor: #2E86C1] {
  DateKey   int      [pk, note: 'YYYYMMDD']
  FullDate  date
  Day       tinyint
  DayOfWeek tinyint
  DayName   varchar
  Month     tinyint
  MonthName varchar
  Quarter   tinyint
  Year      smallint
}

Table DimCompanyName [headercolor: #2E86C1] {
  CompanyNameKey int     [pk]
  CompanyName    varchar [note: 'name observed on a posting']
}

Table DimCompanyProfile [headercolor: #2E86C1] {
  CompanyProfileKey   int     [pk]
  CompanySize         varchar [note: 'nominal not ordinal']
  LinkedInPresence    tinyint
  WebsiteAvailable    tinyint
  VerificationStatus  tinyint
  SocialMediaPresence tinyint
}

Table DimInternshipTitle [headercolor: #2E86C1] {
  InternshipTitleKey int     [pk]
  InternshipTitle    varchar
}

Table DimIndustry [headercolor: #2E86C1] {
  IndustryKey int     [pk]
  Industry    varchar
}

Table DimLocation [headercolor: #2E86C1] {
  LocationKey int     [pk]
  Location    varchar [note: 'no hierarchy in source']
}

Table DimEmploymentType [headercolor: #2E86C1] {
  EmploymentTypeKey int     [pk]
  EmploymentType    varchar
}

Table DimWorkMode [headercolor: #2E86C1] {
  WorkModeKey int     [pk]
  WorkMode    varchar
}

Table DimRecruiterEmail [headercolor: #2E86C1] {
  RecruiterEmailKey     int     [pk]
  RecruiterEmailType    varchar
  SuspiciousEmailDomain tinyint
}

// Relationships: Fact (many) -> Dimension (one).
// `A.x > B.y` and `B.y < A.x` mean the same; they alternate for layout.
Ref: FactInternshipPosting.DateKey > DimDate.DateKey
Ref: DimCompanyName.CompanyNameKey < FactInternshipPosting.CompanyNameKey
Ref: FactInternshipPosting.CompanyProfileKey > DimCompanyProfile.CompanyProfileKey
Ref: DimInternshipTitle.InternshipTitleKey < FactInternshipPosting.InternshipTitleKey
Ref: FactInternshipPosting.IndustryKey > DimIndustry.IndustryKey
Ref: DimLocation.LocationKey < FactInternshipPosting.LocationKey
Ref: FactInternshipPosting.EmploymentTypeKey > DimEmploymentType.EmploymentTypeKey
Ref: DimWorkMode.WorkModeKey < FactInternshipPosting.WorkModeKey
Ref: FactInternshipPosting.RecruiterEmailKey > DimRecruiterEmail.RecruiterEmailKey
